completed all unit tests

--- a/03_Email_UnitTests/03_Email_UnitTests.csproj
+++ b/03_Email_UnitTests/03_Email_UnitTests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\03_Email_Repo\03_Email_Repo.csproj">
+      <Project>{55368abe-ea99-4827-896e-b01348afe632}</Project>
+      <Name>03_Email_Repo</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
