--- a/02_ProjectGreen_UnitTests/02_ProjectGreen_UnitTests.csproj
+++ b/02_ProjectGreen_UnitTests/02_ProjectGreen_UnitTests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\02_ProjectGreen_Repo\02_ProjectGreen_Repo.csproj">
+      <Project>{c26dc7f0-db91-47e2-811d-0ef80499ddd9}</Project>
+      <Name>02_ProjectGreen_Repo</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
