--- a/03_EmailNotifications/03_Email_Console.csproj
+++ b/03_EmailNotifications/03_Email_Console.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Double-J-Design-Origami-Colored-Pencil-Blue-mail-send.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,6 +59,9 @@
       <Project>{55368abe-ea99-4827-896e-b01348afe632}</Project>
       <Name>03_Email_Repo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Double-J-Design-Origami-Colored-Pencil-Blue-mail-send.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
